# ogitor

CMakeModules/install/: windows.cmake
Dependencies/Angelscript/add_on/vector3/: as_ScriptOgreVector3.cpp
Dependencies/GenericImageEditor/: CMakeLists.txt
Dependencies/GenericTextEditor/: CMakeLists.txt
Dependencies/OFS/: CMakeLists.txt
Ogitor/: CMakeLists.txt
OgreOfsPlugin/: CMakeLists.txt
Plugins/DotSceneSerializer/: CMakeLists.txt
Plugins/OgAngelScript/: CMakeLists.txt
Plugins/OgMaterialEditor/: CMakeLists.txt
Plugins/OgModularZone/: CMakeLists.txt
Plugins/OgScreenEffectEditor/: CMakeLists.txt
Plugins/OgScriptEditor/: CMakeLists.txt
qtOfs/: CMakeLists.txt
qtOgitor/: CMakeLists.txt
